[workspace]
resolver = "2"
members = ["nghe-api", "nghe-proc-macro", "nghe-frontend", "nghe-backend"]

[workspace.package]
version = "0.9.10"
edition = "2021"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(coverage_nightly)",
  "cfg(rust_analyzer)",
] }

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
cast_possible_wrap = { level = "allow", priority = 0 }
duplicated_attributes = { level = "allow", priority = 0 }
missing_panics_doc = { level = "allow", priority = 0 }
missing_errors_doc = { level = "allow", priority = 0 }
must_use_candidate = { level = "allow", priority = 0 }
needless_raw_string_hashes = { level = "allow", priority = 0 }
return_self_not_must_use = { level = "allow", priority = 0 }
struct_excessive_bools = { level = "allow", priority = 0 }
wildcard_imports = { level = "allow", priority = 0 }

[workspace.dependencies]
bitcode = { version = "0.6.3", features = ["serde"] }
bon = { version = "3.3.2" }
color-eyre = { version = "0.6.3", default-features = false, features = [
  "capture-spantrace",
] }
concat-string = { version = "1.0.1" }
const_format = { version = "0.2.34", features = ["fmt"] }
convert_case = { version = "0.7.1" }
educe = { version = "0.6.0" }
faster-hex = { version = "0.10.0" }
isolang = { version = "2.4.0", default-features = false, features = ["serde"] }
itertools = { version = "0.14.0" }
rand = { version = "0.8.5" }
serde = { version = "1.0.217", features = ["derive"] }
serde_html_form = { version = "0.2.7" }
serde_with = { version = "3.12.0", features = ["time_0_3"] }
strum = { version = "0.26.3", features = ["derive"] }
time = { version = "0.3.37", features = ["serde-human-readable", "macros"] }
tracing = { version = "0.1.41" }
uuid = { version = "1.12.1", features = ["serde"] }
reqwest = { version = "0.12.12", default-features = false, features = [
  "json",
  "http2",
  "native-tls",
] }
rstest = { version = "0.24.0" }
thiserror = { version = "2.0.11" }
url = { version = "2.5.4" }

# Dev
serde_json = { version = "1.0.138" }
fake = { version = "3.1.0", features = ["derive", "uuid", "time"] }

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
opt-level = 3
strip = "debuginfo"
overflow-checks = false
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
