cargo-features = ["per-package-target"]

[package]
name = "nghe-frontend"
version = { workspace = true }
edition = { workspace = true }
forced-target = "wasm32-unknown-unknown"

[dependencies]
anyhow = { workspace = true }
concat-string = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_html_form = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }

nghe-types = { path = "../types" }

console_error_panic_hook = { version = "0.1.7" }
dioxus = { version = "0.5.1", features = ["web", "router"] }
dioxus-logger = { version = "0.4.1" }
dioxus-sdk = { version = "0.5.0", features = ["storage"] }
getrandom = { version = "0.2.14", features = ["js"] }
log = { version = "0.4.21" }
manganis = { version = "0.2.2" }
gloo = { version = "0.11.0", features = ["net", "utils"] }
url = { version = "2.5.0", features = ["serde"] }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["HtmlElement"] }
readable = { version = "0.16.0", default-features = false, features = [
    "byte",
    "num",
] }

[build-dependencies]
serde_json = { workspace = true }
