[package]
name = "lastfm-client"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
concat-string = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_html_form = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

lastfm-proc-macros = { path = "../lastfm-proc-macros" }

serde_repr = { version = "0.1.19" }

[dev-dependencies]
fake = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
