[package]
name = "nghe_api"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
bon = { workspace = true }
const_format = { workspace = true }
faster-hex = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

fake = { workspace = true, optional = true }

nghe_proc_macro = { path = "../nghe-proc-macro" }

num-traits = { version = "0.2.19" }
paste = { version = "1.0.15" }

md5 = { version = "0.8.0", optional = true }

[dev-dependencies]
fake = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
serde_html_form = { workspace = true }

md5 = { version = "0.8.0" }

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }

[features]
backend = ["md5"]
test = ["fake"]
