[package]
name = "nghe_backend"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
concat-string = { workspace = true }
color-eyre = { workspace = true }
const_format = { workspace = true }
educe = { workspace = true }
faster-hex = { workspace = true }
isolang = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde_html_form = { workspace = true }
serde_with = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

nghe_api = { path = "../nghe-api", features = ["backend"] }
nghe_proc_macro = { path = "../nghe-proc-macro" }

alrc = { version = "0.1.0" }
async-walkdir = { version = "2.1.0" }
atomic-write-file = { version = "0.3.0" }
axum = { version = "0.8.4", default-features = false, features = [
  "http1",
  "http2",
  "json",
  "macros",
  "tokio",
] }
axum-extra = { version = "0.12.0", features = ["typed-header"] }
diesel = { version = "2.3.6", features = ["time", "uuid"] }
diesel-async = { version = "0.7.0", features = [
  "postgres",
  "deadpool",
  "async-connection-wrapper",
] }
diesel_full_text_search = { version = "2.3.0", default-features = false }
diesel_migrations = { version = "2.3.1", features = ["postgres"] }
figment = { version = "0.10.19", features = ["env"] }
futures-lite = { version = "2.6.0" }
image = { version = "0.25.6", default-features = false, features = [
  "jpeg",
  "png",
  "webp",
] }
indexmap = { version = "2.9.0" }
libaes = { version = "0.7.0" }
lofty = { version = "0.22.4" }
loole = { version = "0.4.1" }
mimalloc = { version = "0.1.48", features = ["v3"] }
o2o = { version = "0.5.4", default-features = false, features = ["syn2"] }
rsmpeg = { version = "0.18.0", default-features = false, features = [
  "ffmpeg8",
  "link_system_ffmpeg",
  "link_vcpkg_ffmpeg",
] }
rspotify = { version = "0.15.0", default-features = false, features = [
  "client-reqwest",
  "reqwest-native-tls",
] }
s3 = { version = "0.1.8", default-features = false, features = [
  "async",
  "native-tls",
] }
tokio = { version = "1.45.1", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "sync",
] }
tokio-util = { version = "0.7.15", features = ["io"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.6", features = [
  "cors",
  "compression-br",
  "compression-gzip",
  "compression-zstd",
  "decompression-br",
  "decompression-gzip",
  "decompression-zstd",
  "redirect",
  "request-id",
  "trace",
] }
tracing-error = { version = "0.2.1" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
typed-path = { version = "0.11.0" }
unicode-normalization = { version = "0.1.24" }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
bon = { workspace = true }
fake = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

nghe_api = { path = "../nghe-api", features = ["test"] }

http-body-util = { version = "0.1.3" }
tempfile = { version = "3.20.0" }

[target.'cfg(not(any(target_env = "musl", all(target_arch = "aarch64", target_os = "linux"))))'.dev-dependencies]
diesel = { version = "2.3.6", features = ["postgres"] }

[build-dependencies]
built = { version = "0.8.0" }

[package.metadata.vcpkg]
dependencies = [
  "ffmpeg[avcodec,avfilter,avformat,avresample,mp3lame,opus,soxr,swresample,vorbis,openssl]",
]
git = "https://github.com/microsoft/vcpkg"
rev = "2026.01.16"
overlay-triplets-path = "vcpkg/triplets/"

[package.metadata.vcpkg.target]
x86_64-unknown-linux-gnu = { triplet = "x64-linux-release" }
aarch64-unknown-linux-gnu = { triplet = "arm64-linux-release" }

x86_64-unknown-linux-musl = { triplet = "x64-linux-musl-release" }
aarch64-unknown-linux-musl = { triplet = "arm64-linux-musl-release" }

x86_64-unknown-freebsd = { triplet = "x64-freebsd-release" }

aarch64-apple-darwin = { triplet = "arm64-osx-release" }

x86_64-pc-windows-msvc = { triplet = "x64-windows-static-release" }
