[package]
name = "nghe_frontend"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { version = "1.0.95" }
console_error_panic_hook = { version = "0.1.7" }
leptos = { version = "0.7.2", features = ["csr", "nightly"] }
leptos_router = { version = "0.7.2", features = ["nightly"] }
wasm-bindgen = { version = "0.2.99" }

nghe_api = { path = "../nghe-api" }
web-sys = "0.3.76"
