[package]
name = "nghe_frontend"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
concat-string = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

codee = { version = "0.3.0" }
console_error_panic_hook = { version = "0.1.7" }
gloo-net = { version = "0.6.0", default-features = false, features = [
    "http",
    "json",
] }
leptos = { version = "0.8.0", features = ["csr", "nightly"] }
leptos_router = { version = "0.8.0", features = ["nightly"] }
leptos-use = { version = "0.18.0", default-features = false, features = [
    "storage",
] }
wasm-bindgen = { version = "0.2.100" }

nghe_api = { path = "../nghe-api" }
web-sys = "0.3.77"
