[package]
name = "nghe_proc_macro"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
bon = { workspace = true }
concat-string = { workspace = true }
convert_case = { workspace = true }

deluxe = { version = "0.5.0" }
proc-macro2 = { version = "1.0.86" }
quote = { version = "1.0.36" }
syn = { version = "2.0.68", features = ["fold", "full"] }
