[package]
name = "nghe_proc_macro"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
bon = { workspace = true }
concat-string = { workspace = true }
convert_case = { workspace = true }

deluxe = { version = "0.5.0" }
proc-macro2 = { version = "1.0.95" }
quote = { version = "1.0.40" }
syn = { version = "2.0.101", features = ["fold", "full"] }
