[package]
name = "nghe-proc_macros"
version = { workspace = true }
edition = { workspace = true }

[lib]
proc-macro = true

[dependencies]
concat-string = { workspace = true }

convert_case = "0.6.0"
deluxe = { version = "0.5.0" }
proc-macro2 = { version = "1.0.80" }
quote = { version = "1.0.36" }
syn = { version = "2.0.59", features = ["full"] }
