[package]
name = "nghe-types"
version = { workspace = true }
edition = { workspace = true }

[features]
default = []
test = ["fake", "serde_json"]

[dependencies]
concat-string = { workspace = true }
constcat = { workspace = true }
derivative = { workspace = true }
isolang = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

derive-new = "0.6.0"

md5 = "0.7.0"
nghe-proc_macros = { path = "../proc_macros" }
paste = "1.0.14"

# Test
fake = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[build-dependencies]
built = { version = "0.7.2", features = ["git2"] }
