[package]
name = "nghe-types"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
concat-string = { workspace = true }
constcat = { workspace = true }
derivative = { workspace = true }
isolang = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

derive-new = "0.7.0"

md5 = "0.7.0"
nghe-proc_macros = { path = "../proc_macros" }
paste = "1.0.15"

[dev-dependencies]
fake = { workspace = true }
serde_html_form = { workspace = true }

[build-dependencies]
built = { version = "0.7.3", features = ["git2"] }
