[workspace]

[package]
name = "vcpkg"
version = "0.1.0"
edition = "2021"

[package.metadata.vcpkg]
dependencies = ["gstreamer[flac,mpg123,ogg,opus-base,vorbis]"]
git = "https://github.com/microsoft/vcpkg"
rev = "2023.11.20"
overlay-triplets-path = "vcpkg/triplets/"

[package.metadata.vcpkg.target]
x86_64-unknown-linux-gnu = { triplet = "x64-linux-release" }
aarch64-unknown-linux-gnu = { triplet = "arm64-linux-release" }

x86_64-unknown-linux-musl = { triplet = "x64-linux-release" }
aarch64-unknown-linux-musl = { triplet = "arm64-linux-musl-release" }

x86_64-apple-darwin = { triplet = "x64-osx-release" }
aarch64-apple-darwin = { triplet = "arm64-osx-release" }

x86_64-pc-windows-msvc = { triplet = "x64-windows-release", dependencies = [
  "gstreamer[flac,mpg123,ogg,opus-base,vorbis]",
  "gobject-introspection:x64-windows",
] }
